[gd_scene load_steps=15 format=1]

[ext_resource path="res://Scripts/Instructions.gd" type="Script" id=1]
[ext_resource path="res://Sprites/blue_panel.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Dekko_24.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Sprites/Instructions/example_main.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Instructions/prev.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Instructions/next.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Instructions/exit.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Instructions/example_school.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Instructions/example_bomb.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Instructions/example_entry.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Instructions/example_warning.png" type="Texture" id=11]
[ext_resource path="res://Sounds/help_close.wav" type="Sample" id=12]
[ext_resource path="res://Sounds/help_flip.wav" type="Sample" id=13]

[sub_resource type="SampleLibrary" id=1]

samples/help_close = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/help_flip = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="Instructions" type="Node2D"]

transform/pos = Vector2( 192, 32 )
script/script = ExtResource( 1 )

[node name="Frame" type="Patch9Frame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 512.0
texture = ExtResource( 2 )
patch_margin/left = 32
patch_margin/top = 32
patch_margin/right = 32
patch_margin/bottom = 32

[node name="Label" type="Label" parent="Frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 368.0
margin/right = 576.0
margin/bottom = 528.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Example" type="TextureFrame" parent="Frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 32.0
margin/right = 529.0
margin/bottom = 341.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Previous" type="TextureButton" parent="Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = 160.0
margin/right = 80.0
margin/bottom = 224.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Next" type="TextureButton" parent="Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 560.0
margin/top = 160.0
margin/right = 601.0
margin/bottom = 224.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Exit" type="TextureButton" parent="Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 576.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 64.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Accents" type="Node2D" parent="Frame"]

transform/pos = Vector2( 112, 32 )

[node name="Accent1" type="TextureFrame" parent="Frame/Accents"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 128.0
margin/right = 337.0
margin/bottom = 257.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="Accent2" type="TextureFrame" parent="Frame/Accents"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 64.0
margin/right = 146.0
margin/bottom = 130.0
texture = ExtResource( 9 )
stretch_mode = 0

[node name="Accent3" type="TextureFrame" parent="Frame/Accents"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 309.0
texture = ExtResource( 10 )
stretch_mode = 0

[node name="Accent4" type="TextureFrame" parent="Frame/Accents"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 0.0
margin/right = 417.0
margin/bottom = 309.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="SoundEffects" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="Frame/Previous" to="." method="_on_previous_pressed"]

[connection signal="pressed" from="Frame/Next" to="." method="_on_next_pressed"]

[connection signal="pressed" from="Frame/Exit" to="." method="_on_exit_pressed"]


